Exercise 1.13 Project v0.7/manifests/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      volumes:
          - name: cache-storage
            persistentVolumeClaim:
              claimName: logger-storage-claim
      containers:
        - name: todolist
          image: todolist:1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: cache-storage
            mountPath: /usr/src/app/files
          securityContext:
            runAsUser: 0   # Root user as otherwise permission not getting to write on the file
            runAsGroup: 0  # Root group as otherwise permission not getting to write on the file
            allowPrivilegeEscalation: true
