Exercise 1.13 Project v0.7/manifests/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-svc
spec:
  type: NodePort
  selector:
    app: todolist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
